tg-2882 Cambia label 'profesional' por 'realizado por' en detalle de triage

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/components/triage-details/triage-details.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/components/triage-details/triage-details.component.html
@@ -13,7 +13,7 @@
 			</div>
 
 			<div class="info" fxLayout="column" fxLayoutGap="6px" fxLayoutAlign="space-between">
-				<span>{{ 'guardia.episode.triage.ultimo.PROFESIONAL' | translate }}</span>
+				<span>{{ 'guardia.episode.triage.ultimo.REALIZADO_POR' | translate }}</span>
 				<span class="padding-to-align-chip">{{ triage.professional.firstName }} {{ triage.professional.lastName }}</span>
 			</div>
 
