tg-2850/2851 fix se oculta accion multiple finalizar y popup de suspension

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/ordenes-prescripciones/suspender-medicacion/suspender-medicacion.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/ordenes-prescripciones/suspender-medicacion/suspender-medicacion.component.html
@@ -5,7 +5,7 @@
     </button>
 </div>
 
-<div fxLayout="column">
+<div fxLayout="column" mat-dialog-content>
 
     <div *ngFor="let medication of medications">
         <div class="element-margin">
