--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/episode-details/episode-details.component.scss
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/episode-details/episode-details.component.scss
@@ -25,10 +25,10 @@
 }
 
 mat-divider.margin {
-	margin: 20px 0 !important;
+	margin-bottom: 20px !important;
 }
 
 .triage-list-item {
-	box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.1);
+	box-shadow: 3px 3px 5px 0 rgba(0, 0, 0, 0.1);
 	line-height: 14px;
 }
