--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/components/pediatric-triage/pediatric-triage.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/components/pediatric-triage/pediatric-triage.component.html
@@ -1,97 +1,104 @@
 <div fxLayout="column">
 	<app-triage (onTriageCategoryIdChange)="setTriageCategoryId($event)"
-	            (onDoctorsOfficeIdChange)="setDoctorsOfficeId($event)">
+		(onDoctorsOfficeIdChange)="setDoctorsOfficeId($event)">
 	</app-triage>
 
 	<form [formGroup]="pediatricForm" fxLayout="column" fxFlex="grow shrink initial">
 		<h3 class="page-title" [translate]="'guardia.triage.EVALUATION'"></h3>
 		<div fxLayout="row">
 			<mat-form-field class="example-full-width">
-				<textarea matInput placeholder="Descripción" name="evaluation"></textarea>
+				<textarea matInput placeholder="Descripción" name="notes" formControlName="notes"></textarea>
 			</mat-form-field>
 		</div>
 
 		<h3 class="page-title" [translate]="'guardia.triage.APPEARANCE'"></h3>
-		<mat-form-field appearance="outline" fxLayout="row">
-			<mat-label [translate]="'guardia.triage.TEMPERATURE'"></mat-label>
-			<mat-select formControlName="bodyTemperatureId">
-				<mat-option id="bodyTemperatureId"
-				            *ngFor="let bodyTemperature of (bodyTemperatures$ | async )" [value]="bodyTemperature.id">
-					{{bodyTemperature.description}}
-				</mat-option>
-			</mat-select>
-		</mat-form-field>
-		<div fxLayout="column">
-			<mat-label [translate]="'guardia.triage.CRYING_EXCESSIVE'"></mat-label>
-			<mat-radio-group name="cryingExcesive" id="cryingExcesive" formControlName="cryingExcesive" fxLayoutGap="20px">
-				<mat-radio-button id="withCryingExcesive" value='true'>
-					Si
-				</mat-radio-button>
-				<mat-radio-button id="withoutCryingExcesive" value='false'>
-					No
-				</mat-radio-button>
-			</mat-radio-group>
+		<div formGroupName="appearance">
+			<mat-form-field appearance="outline" fxLayout="row">
+				<mat-label [translate]="'guardia.triage.TEMPERATURE'"></mat-label>
+				<mat-select formControlName="bodyTemperatureId">
+					<mat-option id="bodyTemperatureId" *ngFor="let bodyTemperature of (bodyTemperatures$ | async )"
+						[value]="bodyTemperature.id">
+						{{bodyTemperature.description}}
+					</mat-option>
+				</mat-select>
+			</mat-form-field>
+			<div fxLayout="column">
+				<mat-label [translate]="'guardia.triage.CRYING_EXCESSIVE'"></mat-label>
+				<mat-radio-group name="cryingExcessive" id="cryingExcessive" formControlName="cryingExcessive"
+					fxLayoutGap="20px">
+					<mat-radio-button id="cryingExcesive" [value]="true">
+						Si
+					</mat-radio-button>
+					<mat-radio-button id="notCryingExcesive" [value]="false">
+						No
+					</mat-radio-button>
+				</mat-radio-group>
+			</div>
+			<mat-form-field appearance="outline" fxLayout="row">
+				<mat-label [translate]="'guardia.triage.MUSCLE_HYPERTONIA'"></mat-label>
+				<mat-select formControlName="muscleHypertoniaId">
+					<mat-option id="muscleHypertoniaId"
+						*ngFor="let muscleHypertonya of (muscleHypertonyaOptions$ | async)"
+						[value]="muscleHypertonya.id">
+						{{muscleHypertonya.description}}
+					</mat-option>
+				</mat-select>
+			</mat-form-field>
 		</div>
-		<mat-form-field appearance="outline" fxLayout="row">
-			<mat-label [translate]="'guardia.triage.MUSCLE_HYPERTONIA'"></mat-label>
-			<mat-select formControlName="triageCategoryId">
-				<mat-option id="triageCategoryId"
-				            *ngFor="let muscleHypertonya of (muscleHypertonyaOptions$ | async)" [value]="muscleHypertonya.id">
-					{{muscleHypertonya.description}}
-				</mat-option>
-			</mat-select>
-		</mat-form-field>
 
 		<h3 class="page-title" [translate]="'guardia.triage.BREATH'"></h3>
-		<mat-form-field appearance="outline" fxLayout="row">
-			<mat-label [translate]="'guardia.triage.RESPIRATORY_RATE'"></mat-label>
-			<input matInput type="text" id="respiratoryRate" name="respiratoryRate"
-			       formControlName="respiratoryRate"
-			       placeholder="{{'pacientes.search_patient.forms.RESPIRATORY_RATE' | translate }}">
-		</mat-form-field>
-		<mat-form-field appearance="outline" fxLayout="row">
-			<mat-label [translate]="'guardia.triage.RESPIRATORY_RETRACTION'"></mat-label>
-			<mat-select formControlName="respiratoryRetractionId">
-				<mat-option id="respiratoryRetractionId"
-				            *ngFor="let respiratoryRetraction of (respiratoryRetractionOptions$ | async)"
-				            [value]="respiratoryRetraction.id">
-					{{respiratoryRetraction.description}}
-				</mat-option>
-			</mat-select>
-		</mat-form-field>
-		<div fxLayout="column">
-			<mat-label [translate]="'guardia.triage.STRIDOR'"></mat-label>
-			<mat-radio-group name="stridor" id="stridor" formControlName="stridor" fxLayoutGap="20px">
-				<mat-radio-button id="withStridor" value='true'>
-					Si
-				</mat-radio-button>
-				<mat-radio-button id="withoutStridor" value='false'>
-					No
-				</mat-radio-button>
-			</mat-radio-group>
+		<div formGroupName="breathing">
+			<mat-form-field appearance="outline" fxLayout="row">
+				<mat-label [translate]="'guardia.triage.RESPIRATORY_RATE'"></mat-label>
+				<input matInput type="text" id="respiratoryRate" name="respiratoryRate"
+					formControlName="respiratoryRate"
+					placeholder="{{'pacientes.search_patient.forms.RESPIRATORY_RATE' | translate }}">
+			</mat-form-field>
+			<mat-form-field appearance="outline" fxLayout="row">
+				<mat-label [translate]="'guardia.triage.RESPIRATORY_RETRACTION'"></mat-label>
+				<mat-select formControlName="respiratoryRetractionId">
+					<mat-option id="respiratoryRetractionId"
+						*ngFor="let respiratoryRetraction of (respiratoryRetractionOptions$ | async)"
+						[value]="respiratoryRetraction.id">
+						{{respiratoryRetraction.description}}
+					</mat-option>
+				</mat-select>
+			</mat-form-field>
+			<div fxLayout="column">
+				<mat-label [translate]="'guardia.triage.STRIDOR'"></mat-label>
+				<mat-radio-group name="stridor" id="stridor" formControlName="stridor" fxLayoutGap="20px">
+					<mat-radio-button id="withStridor" [value]="true">
+						Si
+					</mat-radio-button>
+					<mat-radio-button id="withoutStridor" [value]="false">
+						No
+					</mat-radio-button>
+				</mat-radio-group>
+			</div>
+			<mat-form-field appearance="outline" fxLayout="row">
+				<mat-label [translate]="'guardia.triage.OXYGEN_SATURATION'"></mat-label>
+				<input id="bloodOxygenSaturation" name="bloodOxygenSaturation" formControlName="bloodOxygenSaturation"
+					placeholder="00" type="number" matInput>
+			</mat-form-field>
 		</div>
-		<mat-form-field appearance="outline" fxLayout="row">
-			<mat-label [translate]="'guardia.triage.OXYGEN_SATURATION'"></mat-label>
-			<input id="bloodOxygenSaturation" name="bloodOxygenSaturation" formControlName="bloodOxygenSaturation"
-			       placeholder="00" type="number" matInput>
-		</mat-form-field>
+
 		<h3 class="page-title" [translate]="'guardia.triage.CIRCULATION'"></h3>
-		<mat-form-field appearance="outline" fxLayout="row">
-			<mat-label [translate]="'guardia.triage.PERFUSION'"></mat-label>
-			<mat-select formControlName="perfusionId">
-				<mat-option id="perfusionId"
-				            *ngFor="let perfusion of (perfusionOptions$ | async)"
-				            [value]="perfusion.id">
-					{{perfusion.description}}
-				</mat-option>
-			</mat-select>
-		</mat-form-field>
-		<mat-form-field appearance="outline" fxLayout="row">
-			<mat-label [translate]="'guardia.triage.HEART_RATE'"></mat-label>
-			<input matInput type="text" id="heartRate" name="heartRate"
-			       formControlName="heartRate"
-			       placeholder="{{'guardia.triage.HEART_RATE' | translate }}">
-		</mat-form-field>
+		<div formGroupName="circulation">
+			<mat-form-field appearance="outline" fxLayout="row">
+				<mat-label [translate]="'guardia.triage.PERFUSION'"></mat-label>
+				<mat-select formControlName="perfusionId">
+					<mat-option id="perfusionId" *ngFor="let perfusion of (perfusionOptions$ | async)"
+						[value]="perfusion.id">
+						{{perfusion.description}}
+					</mat-option>
+				</mat-select>
+			</mat-form-field>
+			<mat-form-field appearance="outline" fxLayout="row">
+				<mat-label [translate]="'guardia.triage.HEART_RATE'"></mat-label>
+				<input matInput type="text" id="heartRate" name="heartRate" formControlName="heartRate"
+					placeholder="{{'guardia.triage.HEART_RATE' | translate }}">
+			</mat-form-field>
+		</div>
 	</form>
 
 	<mat-action-row>
