tg-2886 [FE] Cambio en el tipo de letra de popup de triage adulto/gin

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/components/adult-gynecological-triage/adult-gynecological-triage.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/components/adult-gynecological-triage/adult-gynecological-triage.component.html
@@ -27,10 +27,10 @@
 				       placeholder="{{'guardia.triage.TEMPERATURE' | translate }}">
 			</mat-form-field>
 			<mat-form-field appearance="outline">
-				<mat-label [translate]="'guardia.triage.OXIGEN_SATURATION'"></mat-label>
+				<mat-label [translate]="'guardia.triage.OXYGEN_SATURATION'"></mat-label>
 				<input matInput type="text" id="bloodOxygenSaturation" name="bloodOxygenSaturation"
 				       formControlName="bloodOxygenSaturation"
-				       placeholder="{{'guardia.triage.OXIGEN_SATURATION' | translate }}">
+				       placeholder="{{'guardia.triage.OXYGEN_SATURATION' | translate }}">
 			</mat-form-field>
 		</div>
 		<div fxLayout="row" fxLayoutGap="20px">
