--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/dialogs/adult-gynecological-triage-dialog/adult-gynecological-triage-dialog.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/dialogs/adult-gynecological-triage-dialog/adult-gynecological-triage-dialog.component.html
@@ -1,7 +1,7 @@
 <div mat-dialog-title>
 	<div class="mat-h2" [translate]="'guardia.triage.TITLE'"></div>
 </div>
-<app-adult-gynecological-triage
+<app-adult-gynecological-triage class="mat-typography" mat-dialog-content
 	(onConfirm)="setTriage($event)"
 	(onCancel)="dialogRef.close()"
 	[confirmLabel]="'guardia.triage.CONFIRM'"
