--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/episode-details/episode-details.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/episode-details/episode-details.component.html
@@ -99,7 +99,7 @@
 
 									<div id="right-side">
 										<span>
-											{{ triage.professional.firstName }} {{ triage.professional.lastName }}
+											{{ triage.professional?.firstName }} {{ triage.professional?.lastName }}
 										</span>
 										<span *ngIf="triage.doctorsOfficeDescription">
 											• {{ triage.doctorsOfficeDescription }}
