tg-2857 agregar validacion para limite maximo de caracteres en campo observacion

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/ordenes-prescripciones/agregar-prescripcion-item/agregar-prescripcion-item.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/ordenes-prescripciones/agregar-prescripcion-item/agregar-prescripcion-item.component.html
@@ -83,7 +83,7 @@
 
 			<mat-form-field appearance="outline">
 				<mat-label>{{'ambulatoria.paciente.ordenes_prescripciones.add_prescription_item_dialog.OBSERVATIONS' | translate}}</mat-label>
-				<textarea matInput type="text" id="observations" name="observations"
+				<textarea matInput maxlength="1024" type="text" id="observations" name="observations"
 						  formControlName="observations"
 						  placeholder="{{'ambulatoria.paciente.ordenes_prescripciones.add_prescription_item_dialog.OBSERVATIONS' | translate }}">
 				</textarea>
