tg-2920/2908 [FE-FIX] Campos inalcanzables y placeholder de frecuencia respiratoria en dialogo de triage pediatrico.

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/components/pediatric-triage/pediatric-triage.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/components/pediatric-triage/pediatric-triage.component.html
@@ -52,7 +52,7 @@
 				<mat-label [translate]="'guardia.triage.RESPIRATORY_RATE'"></mat-label>
 				<input matInput type="text" id="respiratoryRate" name="respiratoryRate"
 					formControlName="respiratoryRate"
-					placeholder="{{'pacientes.search_patient.forms.RESPIRATORY_RATE' | translate }}">
+					placeholder="{{'guardia.triage.RESPIRATORY_RATE' | translate }}">
 			</mat-form-field>
 			<mat-form-field appearance="outline" fxLayout="row">
 				<mat-label [translate]="'guardia.triage.RESPIRATORY_RETRACTION'"></mat-label>
