tg-2925 fix maxlenght en observacion al completar un estudio

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/ordenes-prescripciones/completar-estudio/completar-estudio.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/ordenes-prescripciones/completar-estudio/completar-estudio.component.html
@@ -18,7 +18,7 @@
     <form [formGroup]="completeStudyForm" fxLayout="column" fxLayoutGap="5px" style="margin-top: 25px;">
         <mat-form-field appearance="outline">
             <mat-label>{{'ambulatoria.paciente.ordenes_prescripciones.complete_study_dialog.OBSERVATIONS_LABEL' | translate}}</mat-label>
-            <textarea matInput type="text" id="observations" name="observations"
+            <textarea matInput maxlength="1024" type="text" id="observations" name="observations"
                     formControlName="observations"
                     placeholder="{{'ambulatoria.paciente.ordenes_prescripciones.complete_study_dialog.OBSERVATIONS_PLACEHOLDER' | translate }}">
             </textarea>
