--- a/back-end/hospital-api/src/main/resources/templates/fragments/recipe_order_fragment.html
+++ b/back-end/hospital-api/src/main/resources/templates/fragments/recipe_order_fragment.html
@@ -19,32 +19,25 @@
             margin-bottom: 15px;
         }
         .footer-left{
-            display: inline-block;
+            display: block;
             text-align: left;
-            margin-right: 30px;
         }
         .footer-right{
-            position: relative;
-            top: 30px;
-            display: inline-block;
+            margin-top: 70px;
+            display: block;
             text-align: center;
-            width: 200px;
-        }
-        header{
-            margin-bottom: 20px;
         }
         .hr-signature {
             background:#222222;
             height:1px;
-            width: 60%;
+            width: 20%;
             position: relative;
             display: block;
         }
         .main-container {
             font-size: 13px;
-        }
-        footer {
-            margin-top: 20px;
+            margin-top: 30px;
+            margin-bottom: 40px;
         }
 	</style>
 </head>
@@ -101,7 +94,7 @@
             </div>
         </div>
         <div class="main-container" th:if="${order}">
-            <div th:each="order,iter: ${request.order}">
+            <div th:each="order,iter: ${request.diagnosticReports}">
                 <strong>CIE10: </strong>
                 <label th:text="${#strings.defaultString(order.healthCondition.cie10codes, '-')}"></label>
                 <strong>Diagnóstico: </strong>
@@ -113,11 +106,11 @@
                 <label th:text="${order.snomed.pt}"></label>
                 <br/>
                 <strong>Observaciones: </strong>
-                <label style="word-wrap: break-word;" th:text="${#strings.defaultString(order.note, '-')}"></label>
+                <label style="word-wrap: break-word;" th:text="${#strings.defaultString(order.observations, '-')}"></label>
                 <br/>
             </div>
         </div>
-        <footer th:fragment="footer">
+        <footer>
             <div class="footer-left">
                 <strong >Profesional: </strong><label th:text="${professional.getCompleteName()}"></label>
                 <p><strong>Matrícula: </strong><label th:text="${professional.licenceNumber}"></label></p>
